<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkOrange"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".act.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_icone"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:id="@+id/et_email_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_email"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/et_senha_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_senha"
        android:drawableLeft="@drawable/ic_senha"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/bt_entrar_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/Orange"
        android:onClick="entar"
        android:text="@string/entrar"
        android:textColor="@color/black"
        app:backgroundTint="@android:color/transparent" />

    <TextView
        android:id="@+id/tv_cadastre_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="entar"
        android:text="@string/cadastre"
        android:textColor="@color/black" />



</androidx.appcompat.widget.LinearLayoutCompat>