<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/DarkOrange"
    android:gravity="center"
    tools:context=".act.CadastrarActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_icone"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:id="@+id/et_nome_cad"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:drawableStart="@drawable/ic_user" />

    <EditText
        android:id="@+id/et_email_cad"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:drawableStart="@drawable/ic_email" />



    <EditText
        android:id="@+id/et_senha_cad"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_senha"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/senha"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_senha" />

    <Button
        android:id="@+id/bt_entrar_cad"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="cadastrar"
        android:text="@string/cadastrar"
        android:textColor="@color/black"
        app:backgroundTint="@android:color/transparent" />


</androidx.appcompat.widget.LinearLayoutCompat>